--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,11 @@
 {
   "require": {
+    "symfony/http-foundation": "^4.3"
   },
   "autoload": {
     "psr-4": {
       "Core\\": "core",
+      "Demos\\": "demos",
       "Modules\\": "modules"
     }
   },
